<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="15dp"
    style="@style/SCREEN"
    tools:context=".Login">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/tv_darkmode"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/darkmode"
            android:textSize="18sp"
            android:gravity="center_vertical"
            android:padding="10dp"
            android:textStyle="bold"
            style="@style/TEXT"
            />
        <Switch
            android:id="@+id/switcher"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:gravity="center"/>

    </LinearLayout>
    
    <TextView
        android:text="@string/login"
        style="@style/TEXT"
        android:textSize="25sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginBottom="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email"
            android:hint="@string/email"
            style="@style/TEXT"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:hint="@string/password"
            style="@style/TEXT"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>


    <Button
        android:id="@+id/btn_login"
        android:text="@string/login"
        style="@style/BUTTON"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>


    <TextView
        android:textSize="20sp"
        android:textStyle="bold"
        android:gravity="center"
        style="@style/TEXT"
        android:id="@+id/registerNow"
        android:text="@string/click_to_reigster"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>



</LinearLayout>